<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".Activity.CadastroUsuarioActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="193dp"
        android:layout_height="177dp"
        android:layout_above="@+id/etxt_nome"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/usuario" />

    <EditText
        android:id="@+id/etxt_nome"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/extx_nome"
        android:inputType="textPersonName"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/etxt_senha"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="242dp"
        android:ems="10"
        android:hint="@string/etxt_senha"
        android:inputType="textPersonName"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/etxt_email"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="292dp"
        android:ems="10"
        android:hint="@string/etxt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="162dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/textColorPrimary" />
</RelativeLayout>