<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activity.ValidadorActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/largura_logo"
        android:layout_height="@dimen/altura_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txt_validacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="202dp"
        android:text="@string/texto_validação"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_msgvalida"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="-260dp"
        android:layout_marginTop="236dp"
        android:layout_toStartOf="@+id/imageView2"
        android:text="@string/texto_mensagem_codigo"
        android:textColor="@color/textColorPrimary" />

    <EditText
        android:id="@+id/etxt_codVerifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="216dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/texto_digite_codigo"
        android:textColor="@color/textColorPrimary" />

    <Button
        android:id="@+id/btn_validar"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="124dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btn_validar"
        android:textColor="@color/textColorPrimary" />
</RelativeLayout>